<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.jvmtop</groupId>
    <artifactId>jvmtop</artifactId>
    <version>1.1.0-SNAPSHOT</version>
    <description>Java monitoring for the command-line, profiler included</description>

    <profiles>
        <profile>
            <id>java8</id>

            <dependencies>
                <dependency>
                    <groupId>com.sun</groupId>
                    <artifactId>tools</artifactId>
                    <version>${jdk.version}</version>
                    <scope>system</scope>
                    <systemPath>${toolsjar}</systemPath>
                </dependency>
            </dependencies>


            <properties>
                <!-- change it to point to your tools.jar from your JDK -->
                <toolsjar>${java.home}/../lib/tools.jar</toolsjar>
                <jdk.version>1.6</jdk.version>
            </properties>

            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>3.7.0</version>
                        <configuration>
                            <source>${jdk.version}</source>
                            <target>${jdk.version}</target>
                        </configuration>
                    </plugin>
                </plugins>
            </build>

        </profile>

        <profile>
            <id>java9</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>

            <properties>
                <jdk.version>1.8</jdk.version>
            </properties>

            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>3.7.0</version>
                        <configuration>
                            <source>${jdk.version}</source>
                            <target>${jdk.version}</target>
                        </configuration>
                    </plugin>

                    <!-- maven Java 9 Multi Release jar support -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-jar-plugin</artifactId>
                        <version>3.0.2</version>
                        <configuration>
                            <archive>
                                <manifestEntries>
                                    <Specification-Title>${project.artifactId}</Specification-Title>
                                    <Implementation-Title>${project.artifactId}</Implementation-Title>
                                    <Implementation-Version>${project.version}</Implementation-Version>
                                    <Multi-Release>true</Multi-Release>
                                </manifestEntries>
                            </archive>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-antrun-plugin</artifactId>
                        <version>1.8</version>
                        <executions>
                            <execution>
                                <id>compile-java9</id>
                                <phase>compile</phase>
                                <configuration>
                                    <target>
                                        <mkdir dir="${java9.build.outputDirectory}" />
                                        <javac source="1.9" target="1.9" srcdir="${java9.sourceDirectory}" destdir="${java9.build.outputDirectory}"
                                               classpath="${project.build.outputDirectory}" includeantruntime="false">

                                            <compilerarg value="--add-modules" />
                                            <compilerarg value="jdk.management,jdk.management.agent,jdk.attach,jdk.internal.jvmstat,java.rmi,java.management.rmi,java.desktop,java.sql" />
                                            <compilerarg value="--add-exports=java.rmi/sun.rmi.server=ALL-UNNAMED" />
                                            <compilerarg value="--add-exports=java.rmi/sun.rmi.transport=ALL-UNNAMED" />
                                            <compilerarg value="--add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED" />
                                        </javac>
                                    </target>
                                </configuration>
                                <goals>
                                    <goal>run</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-resources-plugin</artifactId>
                        <version>3.0.2</version>
                        <executions>
                            <execution>
                                <id>copy-resources</id>
                                <phase>prepare-package</phase>
                                <goals>
                                    <goal>copy-resources</goal>
                                </goals>
                                <configuration>
                                    <outputDirectory>${project.build.outputDirectory}/META-INF/versions/9</outputDirectory>
                                    <resources>
                                        <resource>
                                            <directory>${java9.build.outputDirectory}</directory>
                                        </resource>
                                    </resources>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java9.build.outputDirectory>${project.build.directory}/generated-resources/</java9.build.outputDirectory>
        <java9.sourceDirectory>src/main/java</java9.sourceDirectory>
	</properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <id>assemble-with-dependencies</id>
                        <!-- bind to the packaging phase -->
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <finalName>jvmtop</finalName>
                            <appendAssemblyId>false</appendAssemblyId>
                        </configuration>
                    </execution>
                    <execution>
                        <id>assemble-distribution</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <appendAssemblyId>false</appendAssemblyId>
                            <descriptors>
                                <descriptor>src/main/assembly/distribution.xml
                                </descriptor>
                            </descriptors>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.4</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>jdeb</artifactId>
                <groupId>org.vafer</groupId>
                <version>1.5</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jdeb</goal>
                        </goals>
                        <configuration>
                            <verbose>true</verbose>
                            <snapshotExpand>true</snapshotExpand>
                            <!-- expand "SNAPSHOT" to what is in the "PATCH" env variable, if empty timestamp will be used -->
                            <snapshotEnv>PATCH</snapshotEnv>
                            <verbose>true</verbose>
                            <controlDir>${basedir}/src/deb/control</controlDir>
                            <dataSet>
                                <data>
                                    <src>${project.build.directory}/${project.build.finalName}.jar</src>
                                    <type>file</type>
                                    <mapper>
                                        <type>perm</type>
                                        <prefix>/usr/share/jvmtop/lib</prefix>
                                        <user>root</user>
                                        <group>root</group>
                                    </mapper>
                                </data>
                                <data>
                                    <src>${basedir}/src/main/wrappers/jvmtop.sh</src>
                                    <dst>jvmtop</dst>
                                    <type>file</type>
                                    <mapper>
                                        <type>perm</type>
                                        <filemode>755</filemode>
                                        <prefix>/usr/bin</prefix>
                                        <user>root</user>
                                        <group>root</group>
                                    </mapper>
                                </data>
                                <data>
                                    <type>link</type>
                                    <symlink>true</symlink>
                                    <linkName>/usr/share/java/jvmtop.jar</linkName>
                                    <linkTarget>/usr/share/jvmtop/lib/${project.build.finalName}.jar</linkTarget>
                                </data>
                                <data>
                                    <type>template</type>
                                    <paths>
                                        <path>var/lib/${project.artifactId}</path>
                                    </paths>
                                    <mapper>
                                        <type>perm</type>
                                        <user>root</user>
                                        <group>root</group>
                                    </mapper>
                                </data>
                            </dataSet>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
